# HotSAS-Studio

./: .gitignore  ANALYSIS_2026-05-01_kimi.md  CHANGELOG.md  DIALOG_2026-05-01_kimi.md  HotSAS_v1.10_TZ_Internal_Alpha_Build_and_v2_Readiness_Gate.md  HotSAS_v1.10_verification_log_template.md  HotSAS_v1.5-fix_TZ_Component_Library_Completion.md  HotSAS_v1.5-fix_verification_log_template.md  HotSAS_v1.6_TZ_Selected_Region_Analysis_Foundation.md  HotSAS_v1.6_verification_log_template.md  HotSAS_v1.7_TZ_Export_Center_v1.md  HotSAS_v1.7_verification_log_template.md  HotSAS_v1.8_TZ_ngspice_Adapter_v1.md  HotSAS_v1.8_verification_log_template.md  HotSAS_v1.9_TZ_SPICE_Touchstone_Import_Foundation.md  HotSAS_v1.9_verification_log_template.md  HotSAS_v2.0_TZ_Product_Beta_Integration.md  HotSAS_v2.0_verification_log_template.md  HotSAS_v2.1_TZ_Formula_Library_Expansion.md  HotSAS_v2.1_verification_log_template.md  HotSAS_v2.3_verification_log.md  HotSAS_v2.9_acceptance_matrix_template.md  PROMT HotSAS Studio.txt  README.md  latest_verification_log.md  roadmap.txt  ТЗ В_1.1.1 уточнение.txt  ТЗ в_1.1.2. .txt  история чата.txt  тз 1.1.4 фикс.txt  тз в 1.1.3..txt
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
engine/: Cargo.toml
engine/adapters/: Cargo.toml
engine/adapters/src/: component_library_storage.rs  export_center.rs  expression_evaluator.rs  lib.rs  local_settings_storage.rs  project_package_storage.rs  spice_model_parser.rs  touchstone_parser.rs  user_circuit_netlist.rs
engine/adapters/tests/: component_library_storage_tests.rs  formula_engine_generic_tests.rs  formula_engine_tests.rs  formula_pack_loader_tests.rs  full_vertical_slice_tests.rs  json_storage_tests.rs  netlist_export_tests.rs  ngspice_binary_resolver_tests.rs  ngspice_parser_tests.rs  project_package_storage_model_persistence_tests.rs  project_package_storage_tests.rs  report_export_tests.rs  spice_model_parser_tests.rs  touchstone_parser_tests.rs  user_circuit_netlist_model_assignment_tests.rs
engine/api/: Cargo.toml
engine/api/src/: dto.rs  error.rs  facade.rs  lib.rs
engine/api/tests/: advanced_report_api_tests.rs  api_error_tests.rs  app_diagnostics_api_tests.rs  component_library_api_tests.rs  component_model_mapping_api_tests.rs  dependency_boundaries.rs  error_dto.rs  export_center_api_tests.rs  filter_analysis_api_tests.rs  formula_calculation_api_tests.rs  formula_registry_api_tests.rs  ngspice_simulation_api_tests.rs  notebook_api_tests.rs  product_workflow_api_tests.rs  project_package_api_tests.rs  project_session_api_tests.rs  s_parameter_api_tests.rs  schematic_editor_api_tests.rs  simulation_dashboard_api_tests.rs  user_circuit_simulation_api_tests.rs
engine/application/: Cargo.toml
engine/application/src/: error.rs  lib.rs
engine/application/tests/: advanced_report_service_tests.rs  app_diagnostics_tests.rs  circuit_validation_tests.rs  component_library_service_tests.rs  component_model_mapping_service_tests.rs  engineering_notebook_tests.rs  formula_registry_tests.rs  formula_service_generic_tests.rs  model_import_service_tests.rs  model_persistence_service_tests.rs  (+10 more)
engine/cli/: Cargo.toml
engine/core/: Cargo.toml
engine/ports/: Cargo.toml
(+353 files in other folders)
