[workspace]
members = [
  "core",
  "ports",
  "application",
  "adapters",
  "api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["HotSAS Studio contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
