[workspace]
members = [
  "core",
  "ports",
  "application",
  "adapters",
  "api",
  "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["HotSAS Studio contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
