[package]
name = "hotsas_adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
hotsas_core = { path = "../core" }
hotsas_ports = { path = "../ports" }
serde_json.workspace = true

[dev-dependencies]
hotsas_application = { path = "../application" }
